--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,13 @@
 titel=APP-CONFIG
+#Eureka Server
+eureka.client.service-url.defautl-zone=http://localhost:8761/eureka
+#dataSourec
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shubdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+#JPA
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
