--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+#Admin Server URL
+spring.boot.admin.client.url=http://localhost:9999
