--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-titel=APP-CONFIG
+titel=APP-CONFIG-NEW
 #Eureka Server
 eureka.client.service-url.defautl-zone=http://localhost:8761/eureka
 #dataSourec
